<resources>
    <string name="app_name">Tutti Frutti</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="logo_description">Tutti Frutti Game Logo</string>

    <string name="enter_here">Enter Here</string>
    <string name="quick_game">Start a Quick Game</string>
    <string name="start_button">Start a New Game</string>
    <string name="invitation">Check Invitations</string>
    <string name="sign_out">Sign Out</string>


    <string name="invite_friends">Invite Friends</string>
    <string name="incoming_invitation_text">You have invitations!</string>
    <string name="accept_popup_invite">Accept Invitation</string>

    <string name="wait">Please wait</string>
    <string name="instructions">TODO: Add instructions</string>

    <!-- ERRORS -->
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="match_error_inactive_match">This game is inactive!!</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="web_client_id">998166307868-u9o0t95ual7sr07kermt2n13vl368m60.apps.googleusercontent.com</string>
    <string name="input_placeholder">Write a message</string>
    <string name="txtview_score">TextView</string>
    <string name="txtview_winner">Winner/Loser!!</string>
    <string name="txt_btn_start_a_game">Start a Game</string>

</resources>
