<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayGame">

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageViewPlayGame"
            android:layout_width="337dp"
            android:layout_height="230dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logo_description"
            android:padding="0dp"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/invite_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bkgrnd_enter"
            android:text="@string/invite_friends"
            android:textColor="#FFFFFF" />
<!--
        <Button
            android:id="@+id/quick_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bkgrnd_enter"
            android:text="@string/quick_game"
            android:textColor="#FFFFFF" />
-->
        <Button
            android:id="@+id/check_invitations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bkgrnd_enter"
            android:text="@string/invitation"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bkgrnd_enter"
            android:text="@string/sign_out"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:id="@+id/incoming_invitation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button android:id="@+id/accept_popup_invitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- WAIT SCREEN -->
    <LinearLayout
        android:id="@+id/screen_wait"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/wait"
                android:textAlignment="center" />

            <RelativeLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <!-- COMPLETED_TODO: Make this pretty -->

    <LinearLayout
        android:id="@+id/screen_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:text="Fill Each Category with the letter: " />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/magic_letter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="A"
                android:textAlignment="center"
                android:textSize="30sp" />
        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <!--<TextView-->
                <!--android:id="@+id/message_history"-->
                <!--android:layout_width="23dp"-->
                <!--android:layout_height="61dp" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#97f2f3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/category1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="txt" />

                    <!-- TODO Allow for more than one line to fill values -->
                    <EditText
                        android:id="@+id/fill_in_words1"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:baselineAligned="true"
                        android:ems="10"
                        android:hint="FILL AND ENTER"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        android:textAllCaps="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#F3DDB3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/category2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="txte" />

                    <!-- TODO Allow for more than one line to fill values, should be space/comma delimited and wrap -->
                    <EditText
                        android:id="@+id/fill_in_words2"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:baselineAligned="true"
                        android:ems="10"
                        android:hint="FILL AND ENTER"
                        android:inputType="textMultiLine"
                        android:maxLines="20"
                        android:singleLine="false"
                        android:textAllCaps="true" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/screen_chat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/message_box"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:ems="10"
                            android:hint="@string/input_placeholder"
                            android:inputType="text"
                            android:text="" />

                        <ImageButton
                            android:id="@+id/send_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0"
                            android:contentDescription="send"
                            android:padding="20dp"
                            android:scaleType="center"
                            android:src="@android:drawable/ic_menu_send" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/message_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:divider="#fff"
                        android:scrollbarAlwaysDrawVerticalTrack="true" />
                </LinearLayout>
            </LinearLayout>

        </TableLayout>


    </LinearLayout>

</FrameLayout>